--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -3,13 +3,14 @@ name: Publish Python 🐍 package 📦 to PyPI
 on:
   workflow_run:
     workflows: ['tests']
-    branches: [main]
     types:
       - completed
 
 jobs:
   build-n-publish:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: |
+      startsWith(github.ref, 'refs/tags/') &&
+      ${{ github.event.workflow_run.conclusion == 'success' }}
     name: Build and publish Python 🐍 distributions 📦 to PyPI
     runs-on: ubuntu-latest
     steps:
@@ -19,13 +20,10 @@ jobs:
       with:
         python-version: '3.11'
     - name: Install pypa/build
-      run: |
-        python -m pip install build
+      run: python -m pip install build
     - name: Build a binary wheel and a source tarball
-      run: |
-        python -m build
+      run: python -m build
     - name: Publish distribution 📦 to PyPI
-      if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
