--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -1,17 +1,22 @@
 name: Publish Python 🐍 package 📦 to PyPI
 
 on:
-  workflow_run:
-    workflows: ['tests']
-    branches: [main]
-    types:
-      - completed
+  push:
+    tags:
+    - '*'
 
 jobs:
+  tests:
+    uses: ./.github/workflows/tox.yml
   build-n-publish:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    needs: [tests]
     name: Build and publish Python 🐍 distributions 📦 to PyPI
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/djmailer
+    permissions:
+      id-token: write
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
@@ -19,13 +24,11 @@ jobs:
       with:
         python-version: '3.11'
     - name: Install pypa/build
-      run: |
-        python -m pip install build
+      run: python -m pip install build
     - name: Build a binary wheel and a source tarball
-      run: |
-        python -m build
+      run: python -m build
     - name: Publish distribution 📦 to PyPI
-      if: startsWith(github.ref, 'refs/tags')
+      if: ${{ github.event.workflow_run.conclusion == 'success' }}
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
