--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,27 +1,10 @@
 name: tests
 on:
-  - push
-  - pull_request
+  push:
+    branches: [ 'main', 'dev' ]
+  pull_request:
+    branches: [ 'main', 'dev' ]
 
 jobs:
-  build:
-    runs-on: ${{ matrix.platform }}
-    strategy:
-      matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11']
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install tox tox-gh-actions
-    - name: Test with tox
-      run: tox
-      env:
-        PLATFORM: ${{ matrix.platform }}
+  tests:
+    uses: ./.github/workflows/tox.yml
